--- a/At a stadium/Base.lproj/Main.storyboard
+++ b/At a stadium/Base.lproj/Main.storyboard
@@ -7,22 +7,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="At_a_stadium" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="Sj6-j7-PUo"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1047.8260869565217" y="138.61607142857142"/>
-        </scene>
         <!--Login View Controller-->
         <scene sceneID="HhI-ls-ekN">
             <objects>
@@ -36,9 +20,9 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GLF-6w-g2O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1895.6521739130437" y="138.61607142857142"/>
+            <point key="canvasLocation" x="1216" y="139"/>
         </scene>
-        <!--Alert-->
+        <!--通知-->
         <scene sceneID="lKt-e1-d79">
             <objects>
                 <viewController storyboardIdentifier="Alert" id="dI5-r3-H1K" customClass="AlertViewController" customModule="At_a_stadium" customModuleProvider="target" sceneMemberID="viewController">
@@ -48,13 +32,13 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="b1h-X1-0ir"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Alert" id="35v-bH-dsi"/>
+                    <tabBarItem key="tabBarItem" title="通知" image="alert" id="35v-bH-dsi"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MKP-3Y-dZV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="59" y="919"/>
+            <point key="canvasLocation" x="504" y="919"/>
         </scene>
-        <!--Home-->
+        <!--ピッチ-->
         <scene sceneID="m0e-ZD-tEY">
             <objects>
                 <viewController storyboardIdentifier="Home" id="Yy3-sS-fTL" customClass="HomeViewController" sceneMemberID="viewController">
@@ -64,11 +48,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="l0q-B5-Kzm"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" id="tql-C2-KHJ"/>
+                    <tabBarItem key="tabBarItem" title="ピッチ" image="home" id="tql-C2-KHJ"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Hf-KR-flY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-991" y="919"/>
+            <point key="canvasLocation" x="-928" y="919"/>
         </scene>
         <!--Comment View Controller-->
         <scene sceneID="iCu-fw-aB4">
@@ -100,7 +84,7 @@
             </objects>
             <point key="canvasLocation" x="138" y="1615"/>
         </scene>
-        <!--MyPage-->
+        <!--マイページ-->
         <scene sceneID="205-P8-OCg">
             <objects>
                 <viewController storyboardIdentifier="MyPage" id="d62-pk-bXI" customClass="MyPageViewController" sceneMemberID="viewController">
@@ -110,13 +94,13 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="8Cu-G9-nLJ"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="MyPage" id="atL-wu-eh2"/>
+                    <tabBarItem key="tabBarItem" title="マイページ" image="mypage" id="atL-wu-eh2"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u8e-LW-5BM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1100" y="929"/>
+            <point key="canvasLocation" x="1217" y="919"/>
         </scene>
-        <!--Record-->
+        <!--記録-->
         <scene sceneID="qwv-1g-fsj">
             <objects>
                 <viewController storyboardIdentifier="Record" id="XBf-aK-qvr" customClass="RecordViewController" sceneMemberID="viewController">
@@ -126,27 +110,26 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="8jp-rN-Uok"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Record" id="UNp-hJ-VFD"/>
+                    <tabBarItem key="tabBarItem" title="記録" image="record" id="UNp-hJ-VFD"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p8J-Ar-mEr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2362" y="899"/>
+            <point key="canvasLocation" x="-212" y="919"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="D2b-Ld-DVU">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="iJG-Xq-7ho" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="iJG-Xq-7ho" customClass="TabBarController" customModule="At_a_stadium" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="QiV-8U-8Oc">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="ate-qb-C17"/>
                         <segue destination="Yy3-sS-fTL" kind="relationship" relationship="viewControllers" id="UCR-kN-KFU"/>
-                        <segue destination="d62-pk-bXI" kind="relationship" relationship="viewControllers" id="xnG-uu-ukG"/>
                         <segue destination="XBf-aK-qvr" kind="relationship" relationship="viewControllers" id="mgc-Qq-nhW"/>
                         <segue destination="dI5-r3-H1K" kind="relationship" relationship="viewControllers" id="BDo-Ci-ii4"/>
+                        <segue destination="d62-pk-bXI" kind="relationship" relationship="viewControllers" id="xnG-uu-ukG"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ac7-08-j9t" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -154,4 +137,10 @@
             <point key="canvasLocation" x="137.68115942028987" y="138.61607142857142"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="alert" width="25" height="25"/>
+        <image name="home" width="25" height="25"/>
+        <image name="mypage" width="25" height="25"/>
+        <image name="record" width="25" height="25"/>
+    </resources>
 </document>
