--- a/At a stadium/Post/AddMatchData/addMatchDataTableViewCell.xib
+++ b/At a stadium/Post/AddMatchData/addMatchDataTableViewCell.xib
@@ -9,102 +9,91 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="125" id="KGk-i7-Jjw" customClass="addMatchDataTableViewCell" customModule="At_a_stadium" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="351" height="125"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="159" id="KGk-i7-Jjw" customClass="addMatchDataTableViewCell" customModule="At_a_stadium" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="351" height="159"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="351" height="125"/>
+                <rect key="frame" x="0.0" y="0.0" width="351" height="159"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="253" text="明治安田生命J1リーグ 12節" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AA8-MI-WOq">
-                        <rect key="frame" x="5" y="2" width="357" height="16"/>
+                        <rect key="frame" x="5" y="5" width="344" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="y5k-ug-pc8"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="KICKOFF - 2020/6/20(土) 19:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nmi-BO-BXM">
-                        <rect key="frame" x="5" y="21" width="357" height="16"/>
+                        <rect key="frame" x="110" y="28" width="236" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="Eu7-OK-z6W"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="TeamA" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="njC-cp-Z8w">
+                        <rect key="frame" x="110" y="51" width="236" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="VS." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JXM-V8-aUB">
+                        <rect key="frame" x="113" y="81" width="218" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="15" id="Hsh-zO-yby"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="stadium - ユアテックスタジアム仙台" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vmj-4d-248">
-                        <rect key="frame" x="102" y="107.5" width="260" height="14.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="TeamB" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jVS-l0-rgC">
+                        <rect key="frame" x="113" y="103" width="218" height="18"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="260" id="Scc-BO-2ES"/>
+                            <constraint firstAttribute="height" constant="18" id="cht-aG-On6"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="ベガルタ仙台" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="njC-cp-Z8w">
-                        <rect key="frame" x="102" y="41.5" width="260" height="18"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="18" id="68W-52-0if"/>
-                            <constraint firstAttribute="width" constant="260" id="JZG-bX-viS"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="VS." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JXM-V8-aUB">
-                        <rect key="frame" x="102" y="64.5" width="260" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="OqK-V1-lnS"/>
-                            <constraint firstAttribute="width" constant="260" id="UvC-Dy-kCS"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="横浜FC" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jVS-l0-rgC">
-                        <rect key="frame" x="102" y="84.5" width="260" height="18"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="260" id="dYN-Zh-gqE"/>
-                            <constraint firstAttribute="height" constant="18" id="oX5-Ma-PfB"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SqQ-Si-Hj9">
-                        <rect key="frame" x="20" y="42" width="80" height="80"/>
+                        <rect key="frame" x="5" y="28" width="100" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="80" id="THy-N0-2mj"/>
-                            <constraint firstAttribute="width" constant="80" id="ihf-x5-ZIh"/>
+                            <constraint firstAttribute="width" secondItem="SqQ-Si-Hj9" secondAttribute="height" multiplier="1:1" id="H70-Ls-oeQ"/>
+                            <constraint firstAttribute="height" constant="100" id="Ox5-R1-QJX"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="stadium - ユアテックスタジアム仙台" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vmj-4d-248">
+                        <rect key="frame" x="5" y="135" width="341" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="SqQ-Si-Hj9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="1Lr-sE-CBV"/>
-                    <constraint firstItem="Nmi-BO-BXM" firstAttribute="top" secondItem="AA8-MI-WOq" secondAttribute="bottom" constant="3" id="BJ0-ex-YbT"/>
-                    <constraint firstItem="vmj-4d-248" firstAttribute="top" secondItem="jVS-l0-rgC" secondAttribute="bottom" constant="5" id="FRS-UA-LJk"/>
-                    <constraint firstAttribute="trailing" secondItem="njC-cp-Z8w" secondAttribute="trailing" constant="2" id="Gpk-3b-PQu"/>
-                    <constraint firstItem="JXM-V8-aUB" firstAttribute="top" secondItem="njC-cp-Z8w" secondAttribute="bottom" constant="5" id="I53-Sx-jGx"/>
-                    <constraint firstAttribute="bottom" secondItem="vmj-4d-248" secondAttribute="bottom" constant="2" id="IBH-Ny-73u"/>
+                    <constraint firstItem="jVS-l0-rgC" firstAttribute="leading" secondItem="SqQ-Si-Hj9" secondAttribute="trailing" constant="8" id="0lQ-JE-UQW"/>
+                    <constraint firstItem="jVS-l0-rgC" firstAttribute="top" secondItem="JXM-V8-aUB" secondAttribute="bottom" constant="7" id="1Bp-ms-B4P"/>
+                    <constraint firstItem="SqQ-Si-Hj9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="1Lr-sE-CBV"/>
+                    <constraint firstItem="njC-cp-Z8w" firstAttribute="leading" secondItem="SqQ-Si-Hj9" secondAttribute="trailing" constant="5" id="6lb-9e-9Aa"/>
+                    <constraint firstItem="vmj-4d-248" firstAttribute="top" secondItem="SqQ-Si-Hj9" secondAttribute="bottom" constant="7" id="9se-cN-aPh"/>
+                    <constraint firstAttribute="trailing" secondItem="njC-cp-Z8w" secondAttribute="trailing" constant="5" id="BIw-aW-w0x"/>
+                    <constraint firstItem="Nmi-BO-BXM" firstAttribute="leading" secondItem="SqQ-Si-Hj9" secondAttribute="trailing" constant="5" id="C62-RG-3Ki"/>
                     <constraint firstAttribute="trailing" secondItem="AA8-MI-WOq" secondAttribute="trailing" constant="2" id="Ipf-jn-Rki"/>
-                    <constraint firstItem="vmj-4d-248" firstAttribute="leading" secondItem="SqQ-Si-Hj9" secondAttribute="trailing" constant="2" id="JSI-Qd-lLA"/>
-                    <constraint firstItem="njC-cp-Z8w" firstAttribute="leading" secondItem="SqQ-Si-Hj9" secondAttribute="trailing" constant="2" id="Kdg-KB-c1X"/>
-                    <constraint firstItem="jVS-l0-rgC" firstAttribute="top" secondItem="JXM-V8-aUB" secondAttribute="bottom" constant="5" id="LMu-pE-D8W"/>
-                    <constraint firstItem="JXM-V8-aUB" firstAttribute="centerX" secondItem="jVS-l0-rgC" secondAttribute="centerX" id="MF7-Sc-veM"/>
-                    <constraint firstItem="jVS-l0-rgC" firstAttribute="leading" secondItem="SqQ-Si-Hj9" secondAttribute="trailing" constant="2" id="PVr-s8-aL4"/>
-                    <constraint firstAttribute="trailing" secondItem="jVS-l0-rgC" secondAttribute="trailing" constant="2" id="PsS-je-GOz"/>
+                    <constraint firstItem="SqQ-Si-Hj9" firstAttribute="leading" secondItem="vmj-4d-248" secondAttribute="leading" id="M3d-tk-3xB"/>
+                    <constraint firstItem="njC-cp-Z8w" firstAttribute="centerX" secondItem="Nmi-BO-BXM" secondAttribute="centerX" id="Ob8-Ab-Wqb"/>
+                    <constraint firstItem="JXM-V8-aUB" firstAttribute="leading" secondItem="jVS-l0-rgC" secondAttribute="leading" id="SWI-25-5ne"/>
+                    <constraint firstItem="AA8-MI-WOq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="TQS-wI-UGc"/>
+                    <constraint firstItem="JXM-V8-aUB" firstAttribute="trailing" secondItem="jVS-l0-rgC" secondAttribute="trailing" id="UHU-nA-5PY"/>
                     <constraint firstItem="AA8-MI-WOq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="Uey-6S-77N"/>
-                    <constraint firstAttribute="trailing" secondItem="vmj-4d-248" secondAttribute="trailing" constant="2" id="cLE-rw-cgP"/>
-                    <constraint firstAttribute="bottom" secondItem="SqQ-Si-Hj9" secondAttribute="bottom" constant="2" id="dTl-lQ-v3X"/>
-                    <constraint firstItem="Nmi-BO-BXM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="e0r-BD-kca"/>
-                    <constraint firstItem="JXM-V8-aUB" firstAttribute="leading" secondItem="SqQ-Si-Hj9" secondAttribute="trailing" constant="2" id="lk8-xM-LKK"/>
-                    <constraint firstItem="vmj-4d-248" firstAttribute="bottom" secondItem="SqQ-Si-Hj9" secondAttribute="bottom" id="lvB-3H-MoR"/>
-                    <constraint firstAttribute="trailing" secondItem="JXM-V8-aUB" secondAttribute="trailing" constant="2" id="soe-1P-O3l"/>
-                    <constraint firstItem="AA8-MI-WOq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="tHj-p8-gdy"/>
-                    <constraint firstItem="SqQ-Si-Hj9" firstAttribute="top" secondItem="Nmi-BO-BXM" secondAttribute="bottom" constant="5" id="tuh-nH-zhF"/>
-                    <constraint firstAttribute="trailing" secondItem="Nmi-BO-BXM" secondAttribute="trailing" constant="2" id="yix-6l-paw"/>
+                    <constraint firstItem="JXM-V8-aUB" firstAttribute="top" secondItem="njC-cp-Z8w" secondAttribute="bottom" constant="9.5" id="X1k-Md-Bg6"/>
+                    <constraint firstItem="jVS-l0-rgC" firstAttribute="centerX" secondItem="Nmi-BO-BXM" secondAttribute="centerX" constant="-6" id="cUK-iw-e8z"/>
+                    <constraint firstItem="Nmi-BO-BXM" firstAttribute="top" secondItem="AA8-MI-WOq" secondAttribute="bottom" constant="7" id="hKH-l1-iZg"/>
+                    <constraint firstItem="njC-cp-Z8w" firstAttribute="top" secondItem="Nmi-BO-BXM" secondAttribute="bottom" constant="7" id="pm7-eQ-6vz"/>
+                    <constraint firstAttribute="trailing" secondItem="vmj-4d-248" secondAttribute="trailing" constant="5" id="rPY-fl-jFb"/>
+                    <constraint firstItem="SqQ-Si-Hj9" firstAttribute="top" secondItem="AA8-MI-WOq" secondAttribute="bottom" constant="7" id="uru-aT-icV"/>
+                    <constraint firstItem="vmj-4d-248" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="vtZ-iU-V0n"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -116,7 +105,7 @@
                 <outlet property="stadiumImageView" destination="SqQ-Si-Hj9" id="Zal-uy-0ra"/>
                 <outlet property="stadiumLabel" destination="vmj-4d-248" id="a7S-5L-YEv"/>
             </connections>
-            <point key="canvasLocation" x="160.1449275362319" y="-69.977678571428569"/>
+            <point key="canvasLocation" x="160.1449275362319" y="-58.59375"/>
         </tableViewCell>
     </objects>
 </document>
